# Optics

./: README.txt
1_tutor/: rebuild.zsh
1_tutor/src/: main.cpp
2_step_waveguide/src/: main.cpp
3_graded_index_gaussian/src/: main.cpp
4_graded_index_parabolic/: 1q  Untitled.ipynb  make_pngs.py  makegif.py  makegif.zsh
4_graded_index_parabolic/src/: .main.cpp.air_gap  main.cpp  main.cpp.lensed_small_waveguide  main.cpp.old
4_project_graded_index_parabolic/: makegif.zsh
4_project_graded_index_parabolic/src/: main.cpp  meson.build
5_GRIN_CW/: makegif.zsh  ray_tracing.ipynb
5_GRIN_CW/.cache/clangd/index/: main.cpp.C2248021A73306D5.idx
5_GRIN_CW/.ipynb_checkpoints/: make_pngs-checkpoint.py
6_GRIN_axial_mod/: .makegif.zsh.old  meep_field_intensity.ipynb  ray_tracing.ipynb  rebuild.zsh
6_GRIN_axial_mod/.cache/clangd/index/: main.cpp.383EA00F8E2B9A0C.idx  main.cpp.7EE5ACC0722FEF0A.idx
6_GRIN_axial_mod/.ipynb_checkpoints/: ray_tracing-checkpoint.ipynb
6_GRIN_axial_mod/src/: main.cpp  meson.build
